@@ -131,6 +131,11 @@ Fixes, minor enhancements, and performance improvements:
   and copy construction. (#829) (1.4.5/1.3.13)
 * Fix ImageBufAlgo::circular_shift (and oiiotool --cshift) that did not
   wrap correctly for negative shifts. (#832) (1.4.5/1.3.13)
+* The "gaussian" flter incorrectly had default width 2 (correct = 3),
+  and the "mitchell" filter incorrect had default width 3 (correct = 4).
+  These were bugs/typos, the new way is correct. If you were using those
+  filters in ways that used the default width value, appearance may change
+  slightly. (1.4.6)
 
 Build/test system improvements:
 * libOpenImageIO_Util is now built that only has the utility functions
